Fixes #16035: Import file button is still active when the panel is hide

--- a/builder/index.html
+++ b/builder/index.html
@@ -156,7 +156,7 @@
           <div class="col-xl-4 col-5 col-techniques" ng-click="toggleDisplay(true)">
             <div class="row flex-column">
               <div class="col-auto">
-                <div class="row">
+                <div class="row" ng-if="ui.showTechniques">
                   <div class="col">
                     <h3 class="title">Techniques</h3>
                   </div>
