Fixes #16029: Cannot delete file and folder in file editor

--- a/builder/index.html
+++ b/builder/index.html
@@ -365,7 +365,7 @@
                         </ul>
                         <div class="text-center">
                           <div ng-click="fileManagerState.open = true" class="btn btn-success btn-outline" >
-                            Open file editor <i class="fas fa-folder"></i>
+                            Manage resources <i class="fas fa-folder"></i>
                           </div>
                         </div>
                       </div>
