Fixes #16121: Update URLs to our websites

--- a/webapp/sources/rudder/rudder-web/src/main/resources/load-page/rudder-loading.html
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/load-page/rudder-loading.html
@@ -294,7 +294,7 @@
     // Two solutions here : either the url is right, and we just need to reload the page
     window.setTimeout('location.reload()', 4000);
     // Or something else is redirecting on this page, and e need to redirect back
-    //window.setTimeout('window.location = "http://www.normation.com"', 4000);
+    //window.setTimeout('window.location = "https://www.rudder.io"', 4000);
     // ]]>
   </script>
 </body>
