--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
@@ -17,7 +17,7 @@
           Plugins can extend Rudder’s base functionality to add extra features. They can be either open source or proprietary (this is up to the plugin author).
         </p>
         <p>
-          Available plugins are documented in <a href="https://www.normation.com/rudder/plugins/">Rudder Plugin page</a>.
+          Available plugins are documented in <a href="https://www.rudder.io/en/use/plugins/">Rudder Plugin page</a>.
         </p>
       </div>
 
