--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -336,7 +336,7 @@
             <span class="lift:BootstrapMenu?linkToSelf=true;"></span>
             <li class="treeview footer">
               <span>Rudder ${version}</span>
-              <a href="https://www.normation.com/" target="_blank">© Normation ${current-year}</a>
+              <a href="https://www.rudder.io/" target="_blank">© Normation ${current-year}</a>
             </li>
           </ul>
         </section>
