--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
@@ -32,7 +32,7 @@
 <lift:ignore>This part is the detail of a node</lift:ignore>
 <detail-server>
   <style>
-  .query-search-message{
+  .query-search-message, #querySearchSection, #query-search-content, #querySearchInfo{
     display:none !important;
   }
   </style>
@@ -54,7 +54,6 @@
       <h3>Groups containing this node</h3>
       <div id="node_groupTree"></div>
     </div>
-    <div style="clear:both"></div>
   </div>
 
   <div id="node_inventory">
