Fixes #11101: Plugin id on plugin page is a bit rough

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/plugins/pluginInformation.html
@@ -37,8 +37,9 @@
           <div class="portlet-content">
             <div class="deca">
               <ul class="pluginpadd">
-                <li><b>Plugin ID:</b> <span data-plugin="id">[Here comes the plugin id]</span></li>
+                <li><b>Plugin ID:</b> <span data-plugin="fullid">[Here comes the plugin full id]</span></li>
                 <li><b>Plugin version:</b> <span data-plugin="version">[Here comes the plugin version]</span></li>
+                <li><b>Plugin base class:</b> <span data-plugin="baseclass">[Here comes the plugin base class]</span></li>
               </ul>
               <br/>
               <div class="plugin-description" class="pluginpadd">
