Fixes #14433: OS version sort in nodes list is broken

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/common-layout.html
@@ -34,6 +34,7 @@
 
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/jstree/jquery.jstree.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/datatables.min.js"></script>
+    <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/datatables/datatables-natural-sorting-1.10.20.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/jquery-ui.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/timepicker/jquery-ui-timepicker-addon.min.js"></script>
     <script type="text/javascript" data-lift="with-cached-resource" src="/javascript/jquery/timepicker/jquery-ui-timepicker-addon-en.js"></script>
