Fixes #16188: Remove unnecessary borders and padding around the Technique Editor

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/techniqueEditor.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/techniqueEditor.html
@@ -1,13 +1,18 @@
 <lift:surround with="common-layout" at="content">
 
-<head>
-  <title>Rudder - Technique Editor</title>
-  <style>
-    .rudder_col>.ui-widget-content{
-      padding-bottom: 0;
-    }
+  <head>
+    <title>Rudder - Technique Editor</title>
+    <style>
+      .rudder_col{
+        padding: 0;
+        border: none;
+        box-shadow: none;
+      }
+      .rudder_col>.ui-widget-content{
+        padding-bottom: 0;
+      }
   </style>
-</head>
+  </head>
 
   <div class="portlet">
     <div class="portlet-content">
