--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/utilities/eventLogs.html
@@ -44,5 +44,27 @@
       </div>
     </div>
   </div>
-</lift:surround>
 
+  <script id="rollbackBlock" type="text/template">
+    <div class='rollbackDisplay'>
+      <fieldset class='rollbackFieldSet'>
+        <legend>Rollback</legend>
+        <div id='{{rollbackId}}'>
+          <span class='alignRollback'>Restore configuration policy to</span>
+          <ul style='display: inline-block;padding-left:5px; text-align:left;'>
+            <input class='radio' type='radio' id='after' name='action' value='after' checked/>
+            <label for='after'>After</label>
+            <input class='radio' type='radio' id='before' name='action' value='before'/>
+            <label for='before'>Before</label>
+          </ul>
+          <span class='alignRollback'>this change</span>
+          <span>
+            <button id='{{restoreBtnId}}'>Restore</button>
+          </span>
+        </div>
+        <span id='{{confirmId}}'></span>
+      </fieldset>
+    </div>
+  </script>
+
+</lift:surround>
