Fixes #16223: Regroup tabs from \"Hardware\" to \"Virtual Machines\" into one

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
@@ -42,14 +42,14 @@
     <ul id="NodeDetailsTabMenu">
       <li><a href="#node_summary">Summary</a></li>
       <li><a href="#node_reports">Compliance reports</a></li>
-      <li><a href="#node_inventory">Hardware</a></li>
-      <li id="extraHeader"></li>
+      <li><a href="#node_inventory">Inventory</a></li>
+      <li><a href="#node_properties">Properties</a></li>
       <li><a href="#node_logs">Technical logs</a></li>
       <li><a href="#node_parameters">Settings</a></li>
     </ul>
 
   <div id="node_summary">
-    <div  id="nodeDetails" ></div>
+    <div id="nodeDetails"></div>
     <div id="nodeGroups">
       <h3>Groups containing this node</h3>
       <div id="node_groupTree"></div>
@@ -60,14 +60,17 @@
    <div id="nodeInventory"></div>
   </div>
 
-  <span id="extraContent"></span>
 
   <div id="node_reports">
    <div id="reportsDetails"></div>
   </div>
 
-  <div id="node_logs">
-    <div id="logsDetails"></div>
+   <div id="node_logs">
+     <div id="logsDetails"></div>
+   </div>
+
+  <div id="node_properties">
+    <div id="nodeProperties"></div>
   </div>
 
   <div id="node_parameters"></div>
