--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
@@ -39,7 +39,7 @@
   <div id="node_tabs" class="tabs">
     <div id="node_name"></div>
 
-    <ul id="NodeDetailsTabMenu">
+    <ul id="NodeDetailsTabMenu" class="rudder-ui-tabs">
       <li><a href="#node_summary">Summary</a></li>
       <li><a href="#node_reports">Compliance reports</a></li>
       <li><a href="#node_inventory">Inventory</a></li>
