--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/node.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/node.html
@@ -15,35 +15,14 @@
     <div data-lift="node.SearchNodes.head"></div>
     <div class="inner-portlet">
       <div class="inner-portlet-content">
-        <div id="query-search-content">
-          <div class="callout-fade callout-info">
-            <div class="marker">
-              <span class="glyphicon glyphicon-info-sign"></span>
-            </div>
-            <div>
-              <h4>Query based search</h4>
-              Find nodes in your Rudder infrastructure that match different criteria.<br />
-              Define <a href="/secure/nodeManager/groups">node groups</a> from your search results.
-            </div>
-          </div>
-          <div class="inner-portlet-content" style="overflow:auto;">
-            <div id="SearchNodes">
-              <div data-lift="node.SearchNodes.showQuery"></div>
-            </div>
-            <lift:authz role="group_write">
-              <div data-lift="node.SearchNodes.createGroup"></div>
-            </lift:authz>
+        <div class="node-tab-content">
+          <div id="serverDetails">
+              <div data-lift="node.Node.details"></div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div id="createGroupPopup" class="modal fade" data-keyboard="true" tabindex="-1">
-  <lift:ignore>
-    This div gets the content of the createCategoryOrGroup injected within
-  </lift:ignore>
-  <div id="createGroupContainer"></div>
 </div>
 
 </lift:surround>
