Fixes #16352: Compilation error (classname clash)

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/node.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/node.html
@@ -17,7 +17,7 @@
       <div class="inner-portlet-content">
         <div class="node-tab-content">
           <div id="serverDetails">
-              <div data-lift="node.Node.details"></div>
+              <div data-lift="node.NodeDetails.details"></div>
           </div>
         </div>
       </div>
