Fixes #16330: Make Result condition fields more readable

--- a/builder/index.html
+++ b/builder/index.html
@@ -542,8 +542,8 @@
                               <label>
                                 <small>Result conditions defined by this method</small>
                               </label>
-                              <form class="form-horizontal editForm">
-                                <div class="input-group input-group-sm mb-2">
+                              <form class="form-horizontal editForm result-class">
+                                <div class="input-group input-group-sm mb-2 result-success">
                                   <div class="input-group-prepend">
                                     <span class="input-group-text">Success</span>
                                   </div>
@@ -554,7 +554,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="input-group input-group-sm mb-2">
+                                <div class="input-group input-group-sm mb-2 result-repaired">
                                   <div class="input-group-prepend">
                                     <span class="input-group-text">Repaired</span>
                                   </div>
@@ -565,7 +565,7 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="input-group input-group-sm mb-2">
+                                <div class="input-group input-group-sm mb-2 result-error">
                                   <div class="input-group-prepend">
                                     <span class="input-group-text">Error</span>
                                   </div>
