Fixes #16113: Ttitle are too big in doc blocks of the settings page

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/policyServerManagement.html
@@ -502,7 +502,7 @@
             <div class="marker">
               <span class="glyphicon glyphicon-info-sign"></span>
             </div>
-            <h4>Development Policy Check</h4>
+            <p><b>Development Policy Check</b></p>
             <p>Rudder can check generated policies syntax after generation to ensure that only syntactically valid policies are deployed on node..</p>
             <p>
               That check is especially useful when you are developing your own generic method or technique without the technique
@@ -542,7 +542,7 @@
             <div class="marker">
               <span class="glyphicon glyphicon-info-sign"></span>
             </div>
-            <h4>Trigger immediate update of nodes when their configuration changes</h4>
+            <p><b>Trigger immediate update of nodes when their configuration changes</b></p>
             <p>When new policies are generated, you have to wait for the next scheduled run of a node to have it apply them.</p>
             <p>
               Depending on your use case, you may prefer to reduce latency between a node configuration change and its application on
