--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/nodeManager/searchNodes.html
@@ -26,7 +26,7 @@
               Define <a href="/secure/nodeManager/groups">node groups</a> from your search results.
             </div>
           </div>
-          <div class="inner-portlet-content" style="overflow:auto;">
+          <div class="inner-portlet-content">
             <div id="SearchNodes">
               <div data-lift="node.SearchNodes.showQuery"></div>
             </div>
